Fix overflow ios

--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,4 @@
+html,body { overflow-x: hidden; }
 .flash {
 	position: fixed;
 	top : 20px;
